add: gallery post slider

--- a/admin/assets/scss/admin-style.scss
+++ b/admin/assets/scss/admin-style.scss
@@ -237,5 +237,13 @@
 			flex: 0 1 50%;
 			margin-left: 5px;
 		}
+		.skill_label-wrap{
+			flex: 0 1 50%;
+			margin-right: 5px;
+		}
+		.skill_value-wrap{
+			flex: 0 1 50%;
+			margin-left: 5px;
+		}
 	}
 }
