--- a/templates/shortcodes/projects/image-post-template.tmpl
+++ b/templates/shortcodes/projects/image-post-template.tmpl
@@ -1,14 +1,18 @@
-<div class="project-media">
-	%%FEATUREDIMAGE%%
-</div>
-<div class="project-content">
-	<div class="project-meta">
-		%%DATE%%
-		%%AUTHOR%%
-		%%COMMENTS%%
+%%IMAGELIST%%
+<div class="cherry-projects-single__container">
+	<div class="cherry-projects-single__media">
+		%%FEATUREDIMAGE%%
 	</div>
-	%%TERMSLIST%%
-	%%TITLE%%
-	%%CONTENT%%
-	%%BUTTON%%
+	<div class="cherry-projects-single__content">
+		%%SKILLSLIST%%
+		%%DETAILSLIST%%
+		<div class="cherry-projects-single-meta">
+			%%DATE%%
+			%%AUTHOR%%
+			%%COMMENTS%%
+		</div>
+		%%TERMSLIST%%
+		%%TITLE%%
+		%%CONTENT%%
+	</div>
 </div>
