--- a/admin/assets/css/admin-style.css
+++ b/admin/assets/css/admin-style.css
@@ -204,3 +204,15 @@
         -ms-flex: 0 1 50%;
             flex: 0 1 50%;
     margin-left: 5px; }
+  .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .skill_label-wrap {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 1 50%;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
+    margin-right: 5px; }
+  .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .skill_value-wrap {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 1 50%;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
+    margin-left: 5px; }
