--- a/templates/shortcodes/projects/justified-default.tmpl
+++ b/templates/shortcodes/projects/justified-default.tmpl
@@ -1,7 +1,7 @@
 <div class="project-media">
 	%%FEATUREDIMAGE%%
 </div>
-<div class="project-content">
+<div class="project-content hover-content">
 	<div class="project-meta">
 		%%DATE%%
 		%%AUTHOR%%
