--- a/templates/shortcodes/projects/audio-post-template.tmpl
+++ b/templates/shortcodes/projects/audio-post-template.tmpl
@@ -1,15 +1,16 @@
+<div class="cherry-projects-single-meta">
+	%%DATE%%
+	%%AUTHOR%%
+	%%COMMENTS%%
+</div>
 <div class="cherry-projects-single__container">
 	<div class="cherry-projects-single__media">
 		%%FEATUREDIMAGE%%
+		%%AUDIOLIST%%
 	</div>
 	<div class="cherry-projects-single__content">
 		%%SKILLSLIST%%
 		%%DETAILSLIST%%
-		<div class="cherry-projects-single-meta">
-			%%DATE%%
-			%%AUTHOR%%
-			%%COMMENTS%%
-		</div>
 		%%TERMSLIST%%
 		%%TITLE%%
 		%%CONTENT%%
