--- a/templates/shortcodes/projects/gallery-post-template.tmpl
+++ b/templates/shortcodes/projects/gallery-post-template.tmpl
@@ -6,7 +6,7 @@
 %%SLIDER%%
 <div class="cherry-projects-single__container">
 	<div class="cherry-projects-single__media">
-		%%FEATUREDIMAGE%%
+		%%FEATUREDIMAGE crop="true" crop_width="500" crop_height="300"%%
 	</div>
 	<div class="cherry-projects-single__content">
 		%%SKILLSLIST%%
