--- a/templates/shortcodes/projects/justified-default.tmpl
+++ b/templates/shortcodes/projects/justified-default.tmpl
@@ -1,7 +1,12 @@
 <div class="project-media">
 	%%FEATUREDIMAGE%%
+	<div class="hover-content row-format">
+		%%%ZOOMLINK%%
+		%%%EXTERNALLINK%%
+		%%%PERMALINK%%
+	</div>
 </div>
-<div class="project-content hover-content">
+<div class="project-content">
 	<div class="project-meta">
 		%%DATE%%
 		%%AUTHOR%%
