--- a/templates/shortcodes/projects/video-post-template.tmpl
+++ b/templates/shortcodes/projects/video-post-template.tmpl
@@ -1,3 +1,9 @@
+<div class="cherry-projects-single-meta">
+	%%DATE%%
+	%%AUTHOR%%
+	%%COMMENTS%%
+</div>
+%%VIDEOLIST%%
 <div class="cherry-projects-single__container">
 	<div class="cherry-projects-single__media">
 		%%FEATUREDIMAGE%%
@@ -5,11 +11,6 @@
 	<div class="cherry-projects-single__content">
 		%%SKILLSLIST%%
 		%%DETAILSLIST%%
-		<div class="cherry-projects-single-meta">
-			%%DATE%%
-			%%AUTHOR%%
-			%%COMMENTS%%
-		</div>
 		%%TERMSLIST%%
 		%%TITLE%%
 		%%CONTENT%%
