--- a/admin/assets/css/admin-style.css
+++ b/admin/assets/css/admin-style.css
@@ -216,3 +216,22 @@
         -ms-flex: 0 1 50%;
             flex: 0 1 50%;
     margin-left: 5px; }
+  .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .video_embed-wrap {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 1 80%;
+        -ms-flex: 0 1 80%;
+            flex: 0 1 80%;
+    margin-right: 5px; }
+  .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .video_src-wrap {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 1 10%;
+        -ms-flex: 0 1 10%;
+            flex: 0 1 10%;
+    margin-right: 5px;
+    margin-left: 5px; }
+  .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .poster_src-wrap {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 1 10%;
+        -ms-flex: 0 1 10%;
+            flex: 0 1 10%;
+    margin-left: 5px; }
