--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -548,6 +548,9 @@ div.cherry-projects-wrapper .projects-container.loading-animation-fall-perspecti
         bottom: 0;
         padding: 5px 0; }
 
+.cherry-projects-video-list {
+  width: 100%; }
+
 .cherry-projects-wrapper {
   color: #23282d;
   border-bottom: 1px solid #000; }
@@ -571,6 +574,23 @@ div.cherry-projects-wrapper .projects-container.loading-animation-fall-perspecti
   margin: 15px 0; }
 .projects-item .project-content {
   position: relative; }
+.projects-item .simple-icon {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #298ffc;
+  color: #f1f1f1;
+  margin: 5px;
+  border-radius: 30px; }
+  .projects-item .simple-icon span {
+    margin: 5px; }
+  .projects-item .simple-icon:hover {
+    background-color: #206ff4; }
+.projects-item .simple-button {
+  display: inline-block;
+  padding: 10px;
+  background-color: #298ffc;
+  color: #f1f1f1; }
 .projects-item .hover-content {
   display: -webkit-box;
   display: -webkit-flex;
@@ -600,6 +620,10 @@ div.cherry-projects-wrapper .projects-container.loading-animation-fall-perspecti
   background-color: rgba(35, 40, 45, 0.6);
   -webkit-transition: all 0.4s ease-out;
   transition: all 0.4s ease-out; }
+  .projects-item .hover-content.row-format {
+    -webkit-flex-flow: row nowrap;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap; }
   .projects-item .hover-content > * {
     -webkit-box-flex: 0;
     -webkit-flex: 0 1 auto;
@@ -613,20 +637,79 @@ div.cherry-projects-wrapper .projects-container.loading-animation-fall-perspecti
   -webkit-transition: all 0.4s ease-out;
   transition: all 0.4s ease-out; }
   .projects-item.simple-fade-hover .hover-content > * {
+    opacity: 0;
     -webkit-transform: translateY(100%);
     -ms-transform: translateY(100%);
-    transform: translateY(100%);
-    -webkit-transition: all 0.4s ease-out;
-    transition: all 0.4s ease-out; }
+    transform: translateY(100%); }
   .projects-item.simple-fade-hover .hover-content:hover {
     opacity: 1; }
     .projects-item.simple-fade-hover .hover-content:hover > * {
+      opacity: 1;
       -webkit-transform: translateY(0%);
       -ms-transform: translateY(0%);
       transform: translateY(0%);
-      -webkit-transform: scale(1);
-          -ms-transform: scale(1);
-              transform: scale(1); }
+      -webkit-transition: all 0.3s ease-out;
+      transition: all 0.3s ease-out; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(1) {
+        -webkit-transition-delay: 0.1s;
+                transition-delay: 0.1s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(2) {
+        -webkit-transition-delay: 0.2s;
+                transition-delay: 0.2s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(3) {
+        -webkit-transition-delay: 0.3s;
+                transition-delay: 0.3s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(4) {
+        -webkit-transition-delay: 0.4s;
+                transition-delay: 0.4s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(5) {
+        -webkit-transition-delay: 0.5s;
+                transition-delay: 0.5s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(6) {
+        -webkit-transition-delay: 0.6s;
+                transition-delay: 0.6s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(7) {
+        -webkit-transition-delay: 0.7s;
+                transition-delay: 0.7s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(8) {
+        -webkit-transition-delay: 0.8s;
+                transition-delay: 0.8s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(9) {
+        -webkit-transition-delay: 0.9s;
+                transition-delay: 0.9s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(10) {
+        -webkit-transition-delay: 1s;
+                transition-delay: 1s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(11) {
+        -webkit-transition-delay: 1.1s;
+                transition-delay: 1.1s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(12) {
+        -webkit-transition-delay: 1.2s;
+                transition-delay: 1.2s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(13) {
+        -webkit-transition-delay: 1.3s;
+                transition-delay: 1.3s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(14) {
+        -webkit-transition-delay: 1.4s;
+                transition-delay: 1.4s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(15) {
+        -webkit-transition-delay: 1.5s;
+                transition-delay: 1.5s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(16) {
+        -webkit-transition-delay: 1.6s;
+                transition-delay: 1.6s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(17) {
+        -webkit-transition-delay: 1.7s;
+                transition-delay: 1.7s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(18) {
+        -webkit-transition-delay: 1.8s;
+                transition-delay: 1.8s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(19) {
+        -webkit-transition-delay: 1.9s;
+                transition-delay: 1.9s; }
+      .projects-item.simple-fade-hover .hover-content:hover > *:nth-child(20) {
+        -webkit-transition-delay: 2s;
+                transition-delay: 2s; }
 .projects-item.simple-scale-hover .hover-content {
   opacity: 0;
   -webkit-transition: all 0.4s ease-out;
@@ -640,12 +723,71 @@ div.cherry-projects-wrapper .projects-container.loading-animation-fall-perspecti
   .projects-item.simple-scale-hover .hover-content:hover {
     opacity: 1; }
     .projects-item.simple-scale-hover .hover-content:hover > * {
-      -webkit-transform: translateY(0%);
-      -ms-transform: translateY(0%);
-      transform: translateY(0%);
       -webkit-transform: scale(1);
           -ms-transform: scale(1);
-              transform: scale(1); }
+              transform: scale(1);
+      -webkit-transition: all 0.3s ease-out;
+      transition: all 0.3s ease-out; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(1) {
+        -webkit-transition-delay: 0.1s;
+                transition-delay: 0.1s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(2) {
+        -webkit-transition-delay: 0.2s;
+                transition-delay: 0.2s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(3) {
+        -webkit-transition-delay: 0.3s;
+                transition-delay: 0.3s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(4) {
+        -webkit-transition-delay: 0.4s;
+                transition-delay: 0.4s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(5) {
+        -webkit-transition-delay: 0.5s;
+                transition-delay: 0.5s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(6) {
+        -webkit-transition-delay: 0.6s;
+                transition-delay: 0.6s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(7) {
+        -webkit-transition-delay: 0.7s;
+                transition-delay: 0.7s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(8) {
+        -webkit-transition-delay: 0.8s;
+                transition-delay: 0.8s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(9) {
+        -webkit-transition-delay: 0.9s;
+                transition-delay: 0.9s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(10) {
+        -webkit-transition-delay: 1s;
+                transition-delay: 1s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(11) {
+        -webkit-transition-delay: 1.1s;
+                transition-delay: 1.1s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(12) {
+        -webkit-transition-delay: 1.2s;
+                transition-delay: 1.2s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(13) {
+        -webkit-transition-delay: 1.3s;
+                transition-delay: 1.3s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(14) {
+        -webkit-transition-delay: 1.4s;
+                transition-delay: 1.4s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(15) {
+        -webkit-transition-delay: 1.5s;
+                transition-delay: 1.5s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(16) {
+        -webkit-transition-delay: 1.6s;
+                transition-delay: 1.6s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(17) {
+        -webkit-transition-delay: 1.7s;
+                transition-delay: 1.7s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(18) {
+        -webkit-transition-delay: 1.8s;
+                transition-delay: 1.8s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(19) {
+        -webkit-transition-delay: 1.9s;
+                transition-delay: 1.9s; }
+      .projects-item.simple-scale-hover .hover-content:hover > *:nth-child(20) {
+        -webkit-transition-delay: 2s;
+                transition-delay: 2s; }
 
 .projects-end-line-spinner {
   width: 100%; }
