--- a/templates/shortcodes/projects/list-default.tmpl
+++ b/templates/shortcodes/projects/list-default.tmpl
@@ -1,5 +1,10 @@
 <div class="project-media">
 	%%FEATUREDIMAGE%%
+	<div class="hover-content row-format">
+		%%%ZOOMLINK%%
+		%%%EXTERNALLINK%%
+		%%%PERMALINK%%
+	</div>
 </div>
 <div class="project-content">
 	<div class="project-meta">
