--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -8,18 +8,22 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row nowrap;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
+  -webkit-flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   color: #23282d;
   position: relative;
   z-index: 9; }
 
 .projects-filters-list-wrapper {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 1 70%;
-      -ms-flex: 0 1 70%;
-          flex: 0 1 70%; }
+  -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto; }
 
 ul.projects-filters-list {
   display: inline-block;
@@ -43,9 +47,9 @@ ul.projects-filters-list {
 
 .projects-order-filters-wrapper {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 1 30%;
-      -ms-flex: 0 1 30%;
-          flex: 0 1 30%; }
+  -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto; }
 
 ul.order-filters {
   display: inline-block;
@@ -115,6 +119,10 @@ ul.order-filters {
   -webkit-flex-flow: row wrap;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 20px 0; }
   .projects-pagination ul.page-link {
     -webkit-box-flex: 0;
