--- a/public/assets/scss/_filters.scss
+++ b/public/assets/scss/_filters.scss
@@ -3,14 +3,15 @@
 .projects-filters{
 	margin: 30px 0;
 	display: flex;
-	flex-flow: row nowrap;
+	flex-flow: row wrap;
+	justify-content: space-between;
 	color: $dark_color_1;
 	position: relative;
 	z-index: 9;
 }
 
 .projects-filters-list-wrapper{
-	flex: 0 1 70%;
+	flex: 0 1 auto;
 }
 
 ul.projects-filters-list{
@@ -43,7 +44,7 @@ ul.projects-filters-list{
 }
 
 .projects-order-filters-wrapper{
-	flex: 0 1 30%;
+	flex: 0 1 auto;
 }
 ul.order-filters{
 	display: inline-block;
