--- a/templates/shortcodes/projects/cascading-grid-default.tmpl
+++ b/templates/shortcodes/projects/cascading-grid-default.tmpl
@@ -1,9 +1,9 @@
 <div class="project-media">
 	%%FEATUREDIMAGE%%
 	<div class="hover-content row-format">
-		%%%ZOOMLINK%%
-		%%%EXTERNALLINK%%
-		%%%PERMALINK%%
+		%%ZOOMLINK%%
+		%%EXTERNALLINK%%
+		%%PERMALINK%%
 	</div>
 </div>
 <div class="project-content">
