--- a/public/assets/scss/_list-layout.scss
+++ b/public/assets/scss/_list-layout.scss
@@ -8,6 +8,7 @@
 		.inner-wrapper{
 			display: flex;
 			flex-flow: row nowrap;
+			align-items: flex-start;
 		}
 		.project-media{
 			flex: 0 1 auto;
