--- a/admin/assets/scss/admin-style.scss
+++ b/admin/assets/scss/admin-style.scss
@@ -230,20 +230,20 @@
 		display: flex;
 		flex-flow: row wrap;
 		.detail_label-wrap{
-			flex: 0 1 50%;
-			margin-right: 5px;
+			flex: 0 1 49%;
+			margin-right: 1%;
 		}
 		.detail_info-wrap{
-			flex: 0 1 50%;
-			margin-left: 5px;
+			flex: 0 1 49%;
+			margin-left: 1%;
 		}
 		.skill_label-wrap{
-			flex: 0 1 50%;
-			margin-right: 5px;
+			flex: 0 1 49%;
+			margin-right: 1%;
 		}
 		.skill_value-wrap{
-			flex: 0 1 50%;
-			margin-left: 5px;
+			flex: 0 1 49%;
+			margin-left: 1%;
 		}
 		.video_type-wrap{
 			flex: 0 1 100%;
