--- a/templates/shortcodes/projects-terms/terms-grid-default.tmpl
+++ b/templates/shortcodes/projects-terms/terms-grid-default.tmpl
@@ -1,8 +1,10 @@
 <div class="project-terms-media">
 	%%TERMIMAGE%%
+	<div class="hover-content row-format">
+		%%TERMPERMALINK%%
+	</div>
 </div>
 <div class="project-terms-content">
 	%%TERMNAME%%
 	%%TERMDESCRIPTION%%
-	%%TERMPERMALINK%%
 </div>
