--- a/templates/shortcodes/projects-terms/terms-masonry-default.tmpl
+++ b/templates/shortcodes/projects-terms/terms-masonry-default.tmpl
@@ -1,7 +1,10 @@
 <div class="project-terms-media">
 	%%TERMIMAGE%%
+	<div class="hover-content row-format">
+		%%TERMPERMALINK%%
+	</div>
 </div>
 <div class="project-terms-content">
 	%%TERMNAME%%
-	%%TERMPERMALINK%%
+	%%TERMDESCRIPTION%%
 </div>
