--- a/admin/assets/css/admin-style.css
+++ b/admin/assets/css/admin-style.css
@@ -184,6 +184,9 @@
   50% {
     -webkit-transform: scale(1);
             transform: scale(1); } }
+.cherry-project-tabs-wrapper.cherry-component {
+  padding: 5px 0; }
+
 .cherry-ui-repeater-container .cheryr-ui-repeater-content-box {
   display: -webkit-box;
   display: -webkit-flex;
@@ -206,16 +209,15 @@
     margin-left: 1%; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .skill_label-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 49%;
-        -ms-flex: 0 1 49%;
-            flex: 0 1 49%;
-    margin-right: 1%; }
+    -webkit-flex: 0 1 100%;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    margin-bottom: 20px; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .skill_value-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 49%;
-        -ms-flex: 0 1 49%;
-            flex: 0 1 49%;
-    margin-left: 1%; }
+    -webkit-flex: 0 1 100%;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .video_type-wrap {
     -webkit-box-flex: 0;
     -webkit-flex: 0 1 100%;
