--- a/admin/assets/scss/admin-style.scss
+++ b/admin/assets/scss/admin-style.scss
@@ -225,6 +225,12 @@
 	}
 }
 
+.cherry-project-tabs-wrapper{
+	&.cherry-component{
+		padding: 5px 0;
+	}
+}
+
 .cherry-ui-repeater-container{
 	.cheryr-ui-repeater-content-box{
 		display: flex;
@@ -238,12 +244,11 @@
 			margin-left: 1%;
 		}
 		.skill_label-wrap{
-			flex: 0 1 49%;
-			margin-right: 1%;
+			flex: 0 1 100%;
+			margin-bottom: 20px;
 		}
 		.skill_value-wrap{
-			flex: 0 1 49%;
-			margin-left: 1%;
+			flex: 0 1 100%;
 		}
 		.video_type-wrap{
 			flex: 0 1 100%;
