--- a/public/assets/scss/_projects-terms.scss
+++ b/public/assets/scss/_projects-terms.scss
@@ -44,6 +44,18 @@
 				min-width: 70%;
 			}
 		}
+		&.cascading-grid-layout{
+			.projects-terms-list{
+				display: flex;
+				flex-flow: row wrap;
+				align-items: stretch;
+				align-content: stretch;
+				.projects-terms-item{
+					flex: 0 1 auto;
+					height: auto;
+				}
+			}
+		}
 		.term-permalink{
 			span{
 				&:before{
