--- a/admin/assets/css/admin-style.css
+++ b/admin/assets/css/admin-style.css
@@ -37,6 +37,12 @@
       background: rgba(0, 0, 0, 0.2); }
     #cherry-projects-options-form .cherry-projects-options-list-wrapper::-webkit-scrollbar-corner {
       background: transparent; }
+  #cherry-projects-options-form .cherry-projects-options-list-wrapper {
+    position: relative;
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 5px 21px rgba(0, 0, 0, 0.1); }
   #cherry-projects-options-form .cherry-projects-options-control-wrapper {
     position: relative;
     margin-top: 30px;
@@ -74,12 +80,10 @@
 
 .option-section {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row nowrap;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
   box-shadow: 0px 5px 21px rgba(0, 0, 0, 0.1);
   padding: 20px 30px;
   background-color: #fff;
@@ -90,16 +94,14 @@
     border-radius: 0 0 4px 4px; }
   .option-section .option-info-wrapper {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 30%;
-        -ms-flex: 0 1 30%;
-            flex: 0 1 30%; }
+    -ms-flex: 0 1 30%;
+    flex: 0 1 30%; }
     .option-section .option-info-wrapper .option-description {
       font-style: italic; }
   .option-section .option-ui-element-wrapper {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 70%;
-        -ms-flex: 0 1 70%;
-            flex: 0 1 70%; }
+    -ms-flex: 0 1 70%;
+    flex: 0 1 70%; }
 
 .notice-box {
   background: #23282d;
@@ -163,82 +165,73 @@
   top: 0;
   left: 0;
   -webkit-animation: tm-bounce 2.0s infinite ease-in-out;
-          animation: tm-bounce 2.0s infinite ease-in-out; }
+  animation: tm-bounce 2.0s infinite ease-in-out; }
 
 .double-bounce-2 {
   -webkit-animation-delay: -1.0s;
-          animation-delay: -1.0s; }
+  animation-delay: -1.0s; }
 
 @-webkit-keyframes tm-bounce {
   0%, 100% {
     -webkit-transform: scale(0);
-            transform: scale(0); }
+    transform: scale(0); }
   50% {
     -webkit-transform: scale(1);
-            transform: scale(1); } }
+    transform: scale(1); } }
 
 @keyframes tm-bounce {
   0%, 100% {
     -webkit-transform: scale(0);
-            transform: scale(0); }
+    transform: scale(0); }
   50% {
     -webkit-transform: scale(1);
-            transform: scale(1); } }
+    transform: scale(1); } }
+
 .cherry-project-tabs-wrapper.cherry-component {
   padding: 5px 0; }
 
 .cherry-ui-repeater-container .cheryr-ui-repeater-content-box {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row wrap;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap; }
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .detail_label-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 49%;
-        -ms-flex: 0 1 49%;
-            flex: 0 1 49%;
+    -ms-flex: 0 1 49%;
+    flex: 0 1 49%;
     margin-right: 1%; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .detail_info-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 49%;
-        -ms-flex: 0 1 49%;
-            flex: 0 1 49%;
+    -ms-flex: 0 1 49%;
+    flex: 0 1 49%;
     margin-left: 1%; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .skill_label-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 100%;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
+    -ms-flex: 0 1 100%;
+    flex: 0 1 100%;
     margin-bottom: 20px; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .skill_value-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 100%;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%; }
+    -ms-flex: 0 1 100%;
+    flex: 0 1 100%; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .video_type-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 100%;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
+    -ms-flex: 0 1 100%;
+    flex: 0 1 100%;
     margin-bottom: 20px; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .video_embed-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 100%;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
+    -ms-flex: 0 1 100%;
+    flex: 0 1 100%;
     margin-bottom: 20px; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .video_src-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 10%;
-        -ms-flex: 0 1 10%;
-            flex: 0 1 10%;
+    -ms-flex: 0 1 10%;
+    flex: 0 1 10%;
     margin-right: 5px; }
   .cherry-ui-repeater-container .cheryr-ui-repeater-content-box .poster_src-wrap {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 1 10%;
-        -ms-flex: 0 1 10%;
-            flex: 0 1 10%;
+    -ms-flex: 0 1 10%;
+    flex: 0 1 10%;
     margin-left: 5px; }
