--- a/admin/assets/scss/admin-style.scss
+++ b/admin/assets/scss/admin-style.scss
@@ -50,7 +50,16 @@
 		}
 
 	}
-	.cherry-projects-options-control-wrapper{
+
+	.cherry-projects-options-list-wrapper {
+		position: relative;
+		padding: 30px;
+		background-color: #fff;
+		border-radius: 4px;
+		box-shadow: 0px 5px 21px rgba(0, 0, 0, 0.1);
+	}
+
+	.cherry-projects-options-control-wrapper {
 		position: relative;
 		margin-top: 30px;
 		padding: 30px;
